# python_basic_zyablova

./: .gitignore  .gitlab-ci.yml  README.md  requirements.txt
.github/workflows/: .travis.yml  django.yml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile
homework_03/fast_api_app/: app.py  requirements.txt
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: __init__.py  app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: README.md
homework_06/asynchronous_DB/: main.py  models.py
homework_06/classes_modules/: main.py
homework_06/flask/: Dockerfile  docker-compose.yaml
homework_06/flask/task-list/: app.py  config.py  main.py  pyproject.toml
homework_06/flask/task-list/forms/: __init__.py  task_form.py
homework_06/flask/task-list/migrations/versions/: 935b8da1028c_.py  cb606e21ba96_add_column_deleted.py
homework_06/flask/task-list/models/: __init__.py  task.py
homework_06/flask/task-list/templates/: base.html  index.html
homework_06/flask/task-list/templates/task_list/: add_record.html  detail.html  index.html
homework_06/flask/task-list/tests/: test_task_list.py
homework_06/flask/task-list/views/: __init__.py  task_list.py
homework_06/repository_functions_decorators/: main.py
homework_07/: README.md  models.py  test_colories.py  urls.py  views.py
homework_08/: README.md  test_colories.py
homework_09/: admin.py  test_homework_8.py
homework_10/: urls.py  views.py
homework_11/: README.md
(+9 files in other folders)
